# finviz-sec-mcp

./: .env.example  .gitignore  LICENSE  README.md  manifest.json  pyproject.toml  render.yaml
.github/workflows/: main.yml
finviz_sec_mcp/: __main__.py  app_factory.py  http_routes.py  remote.py  server.py
finviz_sec_mcp/clients/: edgar_client.py  finviz_client.py  yfinance_client.py
finviz_sec_mcp/tools/: analyst.py  fundamentals.py  inputs_tab.py  price_history.py  screener.py  sec_filings.py  sector_analysis.py
